# sandbox

./: Cargo.toml  README.md
sandbox/: Cargo.toml
sandbox/src/: bases.rs  entities.rs  events.rs  firstnames.txt  formulas.rs  lastnames.txt  lib.rs  mods.rs  rng.rs  sim.rs
sandbox_test/: Cargo.toml
sandbox_test/src/: emojis.txt  emojis_old.txt  get.rs  main.rs  postseason.rs  schedule.rs  teams.txt  teams_old.txt
