[package]
name = "sandbox_test"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
sandbox = { path = "../sandbox" }
uuid = { version = "1.3.0", features = ["v4"] }
