[package]
name = "sandbox_test"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
sandbox = { path = "../sandbox" }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
uuid = { version = "1.3.0", features = ["v4"] }
